Family members problem Refactor code

--- a/pom.xml
+++ b/pom.xml
@@ -91,6 +91,7 @@
                 <configuration>
                     <source>14</source>
                     <target>14</target>
+                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
